update content and add new pages

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-3/int08-3-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-3/int08-3-3.component.html
@@ -1,3 +1,44 @@
-<p>
-  int08-3-3 works!
-</p>
+<div class="ui grid">
+  <div class="sixteen wide column">
+    <h2 class="ui header">ประเมินคดี</h2>
+
+    <div class="ui top attached header">
+      <span>ประเมินคดี</span>
+    </div>
+
+    <div class="ui attached segment">
+      <div class="ui three column center aligned grid">
+        <div class="column ">
+          <button class="ui mini primary button" style="width:250px;" routerLink="/int08-3-3-1">
+            <i class="line chart icon"></i>
+            ประเมินคดีด้านจำนวนค่าปรับ
+          </button>
+        </div>
+        <div class="column ">
+          <button class="ui mini primary button" style="width:250px;" routerLink="/int08-3-3-2">
+            <i class="line chart icon"></i>
+            ประเมินคดีด้านจำนวนคดี
+          </button>
+        </div>
+        <div class="column ">
+          <button class="ui mini primary button" style="width:250px;" routerLink="/int08-3-3-3">
+            <i class="line chart icon"></i>
+            ประเมินคดีภาพรวม
+          </button>
+        </div>
+      </div>
+
+    </div>
+
+    <br>
+    <div class="ui center aligned grid">
+      <div class="sixteen wide column">
+        <button class="ui mini button" routerLink="/int08-3">
+          <i class="arrow left icon"></i>
+          ย้อนกลับ
+        </button>
+      </div>
+    </div>
+
+  </div>
+</div>
